--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -36,3 +36,15 @@
 \newacronym{cmlm}{CMLM}{conditional masked language model}
 \newacronym{mlm}{MLM}{masked language model}
 \newacronym{xlm}{XLM}{cross-lingual language model}
+\newacronym{glat}{GLAT}{Glancing Transformer}
+\newacronym{lt}{LT}{Latent Transformer}
+\newacronym{levt}{LevT}{Levenshtein Transformer}
+\newacronym{natreg}{NAT-REG}{\myglsentry{nat} with auxiliary regularization}
+\newacronym{hintnat}{Hint-NAT}{hint-based training for \myglsentry{nat}}
+\newacronym{jmnat}{JM-NAT}{jointly masked model for \myglsentry{nat}}
+\newacronym{crf}{CRF}{conditional random fields}
+\newacronym{dcrf}{DCRF}{dynamic-transition \myglsentry{crf}}
+\newacronym{em}{EM}{expectation-maximization}
+\newacronym{odd}{ODD}{optimal deduplicated decoding}
+\newacronym{emodd}{EM+ODD}{\myglsentry{em} training + \myglsentry{odd}}
+\newacronym{oaxe}{OaXE}{order-agnostic cross-entropy}
