--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,35 @@
+@inproceedings{rezende2015variational,
+  title={Variational inference with normalizing flows},
+  author={Rezende, Danilo and Mohamed, Shakir},
+  booktitle={International conference on machine learning},
+  pages={1530--1538},
+  year={2015},
+  organization={PMLR}
+}
+
+@misc{du2021orderagnostic,
+      title={Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation},
+      author={Cunxiao Du and Zhaopeng Tu and Jing Jiang},
+      year={2021},
+      eprint={2106.05093},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{chen-etal-2021-university,
+  title = {The {U}niversity of {E}dinburgh’s {E}nglish-{G}erman and
+                  {E}nglish-{H}ausa Submissions to the {WMT}21 News Translation
+                  Task},
+  author = {Pinzhen Chen and Jindřich Helcl and Ulrich Germann and Laurie
+                  Burchell and Nikolay Bogoychev and Antonio Valerio Miceli
+                  Barone and Jonas Waldendorf and Alexandra Birch and Kenneth
+                  Heafield},
+  year = 2021,
+  publisher = "Association for Computational Linguistics",
+  booktitle={Proceedings of the Sixth Conference on Machine Translation},
+}
+
+
 @book{koehn2009statistical,
     author        = {Koehn, Philipp},
     title         = {Statistical machine translation},
