--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -58,3 +58,8 @@
 \newcommand{\pulrad}[1]{\raisebox{1.5ex}[0pt]{#1}}
 \newcommand{\mc}[1]{\multicolumn{1}{c}{#1}}
 \newcommand{\mcl}[1]{\multicolumn{1}{l}{#1}}
+
+% this is for the examples
+\newcommand{\redund}[1]{\textcolor{black!30!red!100}{\underline{#1}}}
+\newcommand{\greenund}[1]{\textcolor{black!40!green!100}{\underline{#1}}}
+\newcommand{\blueund}[1]{\textcolor{black!30!blue!100}{\underline{#1}}}
