--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -416,7 +416,7 @@ illustration in Figure \ref{fig:oaxe-example}).
 
   \caption{An illustration of (a) cross-entropy, (b) aligned cross-entropy, and
     (c) order-agnostic cross-entropy on a toy example. We use the figure from
-    \citet{du2021orderagnostic}}%
+    \citet{du2021orderagnostic}, Figure 1}%
   \label{fig:oaxe-example}
 \end{figure}
 
@@ -468,7 +468,7 @@ differences between \acp{mlm} and \acp{xlm}.
 
   \caption{A comparison of masked language model and translation
     (cross-lingual) language model architectures. We use the image of
-    \citet{conneau-lample-2019-cross}.}%
+    \citet{conneau-lample-2019-cross}, Figure 1.}%
   \label{fig:mlm-xlm-example}
 \end{figure}
 
