--- a/thesis/04-nmt-ctc.tex
+++ b/thesis/04-nmt-ctc.tex
@@ -173,7 +173,7 @@ sequence, the model will not be able to generate the whole target sequence.
 
   \caption{The scheme of the non-autoregressive architecture with
     state-splitting and CTC. The image is taken from
-    \citet{libovicky-helcl-2018-end}.}%
+    \citet{libovicky-helcl-2018-end}, Figure 1.}%
   \label{fig:state-splitting}
 \end{figure}
 
