further text in chapter 3, closing in!

--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -48,3 +48,4 @@
 \newacronym{odd}{ODD}{optimal deduplicated decoding}
 \newacronym{emodd}{EM+ODD}{\myglsentry{em} training + \myglsentry{odd}}
 \newacronym{oaxe}{OaXE}{order-agnostic cross-entropy}
+\newacronym{smart}{SMART}{semi-autoregressive training}
