--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -229,12 +229,14 @@ author={
   publisher={Springer}
 }
 
-@article{bengio2015scheduled,
-  title={Scheduled sampling for sequence prediction with recurrent neural networks},
+@inproceedings{bengio2015scheduled,
+  title={Scheduled sampling for sequence prediction with recurrent Neural networks},
   author={Bengio, Samy and Vinyals, Oriol and Jaitly, Navdeep and Shazeer, Noam},
-  journal={arXiv preprint arXiv:1506.03099},
+  booktitle={Proceedings of the 28th International Conference on Neural Information Processing Systems-Volume 1},
+  pages={1171--1179},
   year={2015}
 }
+
 
 @article{schwenk2019wikimatrix,
   title={Wikimatrix: Mining 135m parallel sentences in 1620 language pairs from wikipedia},
