--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -59,10 +59,9 @@ and the key concepts in non-autoregressive \ac{nmt}.  In Section
 \ref{sec:nat:principles}, we first describe the principles that most of the
 related literature has in common. Then, we provide a survey of notable
 approaches to \ac{nat}. We categorize the studied methods into alignment-based
-methods (Section \ref{sec:nat:alignment}), iterative methods (Section
-\ref{sec:nat:iterative}), methods using auxiliary objectives (Section
-\ref{sec:nat:aux}), and semi-autoregressive models (Section
-\ref{sec:nat:semi}). \JH{Then there is the Misc category ((Section
+methods (Section \ref{sec:nat:alignment}), iterative (or semi-autoregressive)
+methods (Section \ref{sec:nat:semi}), methods using auxiliary objectives
+(Section \ref{sec:nat:aux}). \JH{Then there is the Misc category ((Section
   \ref{sec:nat:misc}).} We conclude this chapter with a discussion of the
 limitations of the presented literature and \JH{and what?}
 % Naturally, some methods belong to more than one category, in which case we
@@ -149,9 +148,6 @@ explicitly, leaving out the \eos{} symbol from the mathematical model:
 
 % It is, however, possible to estimate the target length explicitly.
 % \JH{...}
-
-\JH{mention these:}
-\citep{ghazvininejad-etal-2019-mask} \citep{mansimov2019generalized}
 
 % ------------------------------------------------------------------------------
 \paragraph{Multimodality Problem.} In one of the first applications of a
@@ -402,13 +398,13 @@ misalignment issue. Instead of finding an appropriate alignment, they introduce
 a new bag-of-ngrams objective, which minimizes the difference between the
 \ac{nat} model output and the target sentence. \JH{tell me more!}
 
-\paragraph{order-agnostic XE for NAT} \textbf{AXE but extended to non-monotonic}
-The alignment-based methods, such as \ac{axe} or \ac{ctc} assume that the
-alignment between the label and the output sequences is monotonic, i.e. the
-ordering of aligned positions is the same. \citet{du2021orderagnostic} design
-\ac{oaxe}, a new training objective which permits non-monotonic alignments (see
-illustration in Figure \ref{fig:oaxe-example}).
-\JH{continue}
+\paragraph{Order-Agnostic Cross-Entropy for \acs{nat}.} \textbf{AXE but
+  extended to non-monotonic} The alignment-based methods, such as \ac{axe} or
+\ac{ctc} assume that the alignment between the label and the output sequences
+is monotonic, i.e. the ordering of aligned positions is the
+same. \citet{du2021orderagnostic} design \ac{oaxe}, a new training objective
+which permits non-monotonic alignments (see illustration in Figure
+\ref{fig:oaxe-example}).  \JH{continue}
 
 \begin{figure}
   \centering
@@ -442,35 +438,6 @@ The training of the Imputer model takes into account every partial output
 potentially already decoded and maximizes a log-likelihood lower bound, which
 can be comptued with a dynamic programming algorithm. \JH{more needed? or
   less?}
-
-
-% ------------------------------------------------------------------------------
-\paragraph{Iterative Decoding from Masked Language Models.} Recently,
-pre-trained \acp{mlm} such as BERT \citep{devlin-etal-2019-bert} have attracted
-attention from the translation research
-community. \citet{ghazvininejad-etal-2019-mask} introduce \acp{cmlm}, an
-extension to \acp{xlm} for multilingual applications, including \ac{mt}
-\citep{conneau-lample-2019-cross}.
-
-Unlike conventional language models that estimate the probability of a word
-given the preceding words, \acp{mlm} are trained to predict words on masked
-positions inside a sequence. Instead of working with a monolingual sequence,
-\acp{xlm} extend this idea to a pair of sequences in two (or more) languages.
-To facilitate for alignment modeling and language identification, \ac{xlm}
-architectures include a language embedding and reset the positional encodings
-for each sentence. See Figure \ref{fig:mlm-xlm-example} for an illustration of
-differences between \acp{mlm} and \acp{xlm}.
-
-\begin{figure}
-  \centering
-
-  \includegraphics[width=\textwidth]{img/mlm-xlm.png}
-
-  \caption{A comparison of masked language model and translation
-    (cross-lingual) language model architectures. We use the image of
-    \citet{conneau-lample-2019-cross}, Figure 1.}%
-  \label{fig:mlm-xlm-example}
-\end{figure}
 
 
 
@@ -535,12 +502,118 @@ losses.
 
 
 % ------------------------------------------------------------------------------
-\section{Semi-Autoregressive Models.}%
+\section{Semi-Autoregressive and Iterative Methods}%
 \label{sec:nat:semi}
 % ------------------------------------------------------------------------------
 
+\JH{some text here, about how there is a constant time of the transformer model
+  executions, and when the constant is one, some people call it fully NAT, and
+  when it is more than one (but constant wrt target length), then we call it
+  semi-autoregressive, or iterative, and that there is not much difference
+  between these two terms. Then a paragraph about the methods presented in this
+  section, that most of them are actually based on the ideas from
+  \citet{lee-etal-2018-deterministic}, and in turn on
+  \citet{ghazvininejad-etal-2019-mask}.}
+
+\paragraph{Iterative Decoding from Masked Language Models.} Recently,
+pre-trained \acp{mlm} such as BERT \citep{devlin-etal-2019-bert} have attracted
+attention from the translation research
+community. \citet{ghazvininejad-etal-2019-mask} introduce \acp{cmlm}, an
+extension to \acp{xlm} for multilingual applications, including \ac{mt}
+\citep{conneau-lample-2019-cross}.
+
+Conventional \acp{lm} estimate the probability of a word given the preceding
+words.  In contrast, \acp{mlm} are trained on sentences where a number of
+tokens has been masked-out, and the objective is to predict what the masked
+words were, given the rest of the sentence. \Acp{xlm} extend this idea to a
+pair of sentences in two (or more) languages. That is, tokens from either
+source, or target sentence, or both, are masked and the model tries to predict
+them.  To facilitate for alignment modeling and language identification,
+\ac{xlm} architectures include a language embedding and reset the positional
+encodings for each sentence. See Figure \ref{fig:mlm-xlm-example} for an
+illustration of the difference between \acp{mlm} and \acp{xlm}.
+
+\begin{figure}
+  \centering
+
+  \includegraphics[width=\textwidth]{img/mlm-xlm.png}
+
+  \caption{A comparison of masked language model and translation
+    (cross-lingual) language model architectures. We use the image of
+    \citet{conneau-lample-2019-cross}, Figure 1.}%
+  \label{fig:mlm-xlm-example}
+\end{figure}
+
+\Aclp{cmlm} originate in the ideas of
+\citet{conneau-lample-2019-cross}. However, there are a few differences. First,
+\acp{cmlm} use an encoder-decoder architecture, rather than a decoder-only
+model that works on the concatenation of the source and target
+sentences. Second, only the target words are masked and subject to the training
+and prediction. \Acp{cmlm} are also intended for use in the end-task, rather
+than for cross-lingual \ac{lm} pretraining, as is the case of \acp{xlm}.
+
+The decoding process starts with the estimation of the target length. For this
+purpose, \citet{ghazvininejad-etal-2019-mask} include a special \texttt{LENGTH}
+token in the decoder input and predict the target length as the output on this
+position. This way the length predictor can be trained jointly with the
+translation model using the cross entropy training signal. The authors show
+that it is useful to sample a small number of different length candidates,
+decode a translation for each length, and then pick the highest scoring one.
+
+Given a target length, the generation begins with a sequence of mask symbols.
+In each iteration, the tokens on all masked positions are predicted in parallel
+(independently, and thus, non-autoregressively). Then, a number of the tokens
+that receive the lowest probability by the model is selected and masked-out
+again, prepared to be re-predicted in the next iteration. The number of the
+masked tokens is decreasing with each iteration, so that a constant number of
+iterations is needed to generate the whole translation.
+
+In their generalized framework for sequence generation,
+\citet{mansimov2019generalized} experiment with other masking strategies, such
+as left-to-right, easy-first, or uniform.
+
+\paragraph{SMART.} In their follow-up experiments,
+\citet{ghazvininejad-etal-2020-semiautoregressive} address the exposure bias
+issue in context of \acp{cmlm} (although they use the terms autoregressive and
+non-autoregressive for the distinction between using the model predictions
+during training and teacher forcing).
+
+As discussed in Section \ref{sec:training}, the exposure bias problem arises
+when the model is trained on ground-truth data, but during decoding, it relies
+on its own (often incorrect) decisions instead. \Acp{cmlm} are trained to
+predict masked tokens given the ground-truth context, but during decoding, the
+refinement is done using generated context instead.
+
+To tackle this issue, \citet{ghazvininejad-etal-2020-semiautoregressive}
+propose to mix the ground-truth tokens with the model predictions. This
+approach is somewhat similar to scheduled sampling for \aclp{rnn}
+\citep{bengio2015scheduled}.
+
+\paragraph{DisCO.} \textbf{iterative, change to the attention and objective}
+\citep{kasai2020nonautoregressive} -- the authors extend the \ac{cmlm} model
+\citep{ghazvininejad-etal-2019-mask}. Instead of predicting only the tokens
+which are masked-out, the authors propose an architecture that is able for each
+position in the target sequence to predict a subset of the other tokens. They
+achieve this goal by adapting the attention module. First the self-attention
+does not attend to the same position in the previous layer. Second, to prevent
+information leakage between the same positions on different layers, the
+self-attention keys and values are decontextualized, meaning that instead of
+the hidden states from the previous layer, the decoder input embeddings are
+used.
+
+\paragraph{JM-NAT} \textbf{iterative, auxiliary objective}
+\citep{guo-etal-2020-jointly} They mask some words in the encoder (as they do
+it in BERT) in each step to achieve a more robust representation in the
+encoder. They introduce an auxiliary loss for the encoder, for predicting the
+masked tokens. They do the same thing for the decoder, but they mask random
+n-grams instead of random tokens. Unlike encoder, they first randomly select
+the number n-grams to mask (to allow for iterative unmasking during
+decoding). They also use an auxiliary n-gram loss function which is tailored to
+help with the problem of repetitive tokens in the translation. They use
+mask-predict \citep{ghazvininejad-etal-2019-mask} for decoding.
 
 
+% ------------------------------------------------------------------------------
 \paragraph{Semi-Autoregressive \acs{nmt}} One of the first attempts to bring
 together the best of the worlds of \ac{ar} and \ac{nar} models was proposed by
 \citet{wang-etal-2018-semi}. In their work, the authors use a
@@ -584,9 +657,20 @@ An extension to the Insertion Transformer is
 KERMIT. \citep{chan-etal-2019-kermit} \JH{more about kermit}
 
 
-\paragraph{Levenshtein Transformer.} \citet{gu-etal-2019-levenshtein}
+\paragraph{Levenshtein Transformer.} An interesting combination of the ideas
+introduced in Insertion Transformer and \acp{cmlm} is the \acl{levt}
+(\acs{levt}\glsunset{levt}; \citealp{gu-etal-2019-levenshtein}). This model
+operates in an iterative fashion, much like the aforementioned methods. At the
+beginning, \ac{levt} takes either an empty sentence or a crude, intermediate
+sentence for refinement. Each iteration consists of applying three
+policies. First, tokens to be deleted are identified and removed from the
+sequence. Second, each slot (a position between two tokens) is assigned with a
+number, and this number of placeholder symbols is inserted into the slot.
+Third, for each placeholder, a token from the vocabulary is selected and the
+placeholder symbols are replaced with the selected tokens, resulting in a
+refined version of the input sentence.  Each of the three stages of a
+refinement iteration is performed non-autoregressively.
 
-\paragraph{SMART.} \citet{ghazvininejad-etal-2020-semiautoregressive}
 
 
 % ------------------------------------------------------------------------------
@@ -598,28 +682,6 @@ KERMIT. \citep{chan-etal-2019-kermit} \JH{more about kermit}
 % ------------------------------------------------------------------------------
 
 %\paragraph{LaNMT} \citep{shu2020latent} -- latent-variable NAR NMT with deterministic inference using a delta posterior \JH{to bych nechal na potom nebo vyhodil}
-\paragraph{DisCO.} \textbf{iterative, change to the attention and objective}
-\citep{kasai2020nonautoregressive} -- the authors extend the \ac{cmlm} model
-\citep{ghazvininejad-etal-2019-mask}. Instead of predicting only the tokens
-which are masked-out, the authors propose an architecture that is able for each
-position in the target sequence to predict a subset of the other tokens. They
-achieve this goal by adapting the attention module. First the self-attention
-does not attend to the same position in the previous layer. Second, to prevent
-information leakage between the same positions on different layers, the
-self-attention keys and values are decontextualized, meaning that instead of
-the hidden states from the previous layer, the decoder input embeddings are
-used.
-
-\paragraph{JM-NAT} \textbf{iterative, auxiliary objective}
-\citep{guo-etal-2020-jointly} They mask some words in the encoder (as they do
-it in BERT) in each step to achieve a more robust representation in the
-encoder. They introduce an auxiliary loss for the encoder, for predicting the
-masked tokens. They do the same thing for the decoder, but they mask random
-n-grams instead of random tokens. Unlike encoder, they first randomly select
-the number n-grams to mask (to allow for iterative unmasking during
-decoding). They also use an auxiliary n-gram loss function which is tailored to
-help with the problem of repetitive tokens in the translation. They use
-mask-predict \citep{ghazvininejad-etal-2019-mask} for decoding.
 
 
 \JH{these below} are considered fully NAT
@@ -667,14 +729,24 @@ errors in the intermediate prediction.
 
 The decoding is similar to the process proposed by
 \citet{gu2017nonautoregressive}, but the target length prediction is done as in
-the \ac{cmlm} approach -- an artificial source token \texttt{[LENGTH]} is
+the \ac{cmlm} approach -- an artificial source token \texttt{LENGTH} is
 prepended to the source sentence, and the encoder representation at the first
 position is used to predict the target length.
 
 
-\paragraph{huang} \citep{huang-etal-2021-nonautoregressive} -- layer-wise
-prediction a nd deep supervision (is it semi or not?)
+\paragraph{Layer-Wise Prediction with Deep Supervision.}  \textbf{fully NAT}
+\JH{although looks like iterative with many shallow decoder steps} A recent
+approach by \citet{huang-etal-2021-nonautoregressive} uses grounding of the
+Transformer hidden states in all layers to the target sentence.  In every
+decoder layer, the model generates the intermediate sequence from the hidden
+states using a linear projection and a softmax layer. The embeddings of the
+decoded tokens are added to the input to the next layer along with the hidden
+state values.
 
+The deep supervision grounds the states of all layers, not just the last one,
+to the target sequence. The objective function is extended to include the cross
+entropies of the layer-wise softmax predictions on all Transformer layers in
+the decoder stack.
 
 
 \section{Fully NAT}
